Other summary and class fixes

--- a/files/en-us/glossary/alpn/index.html
+++ b/files/en-us/glossary/alpn/index.html
@@ -47,7 +47,7 @@ tags:
  <tbody>
   <tr>
    <td>{{RFC(7301)}}</td>
-   <td><span class="spec-RFC">IETF RFC</span></td>
+   <td>IETF RFC</td>
    <td>Initial definition.</td>
   </tr>
  </tbody>
