--- a/files/en-us/glossary/attribute/index.html
+++ b/files/en-us/glossary/attribute/index.html
@@ -6,7 +6,7 @@ tags:
   - Glossary
   - HTML
 ---
-<p><span class="glossaryLink new">An <strong>attribute</strong></span> extends an {{Glossary("element")}}, changing its behavior or providing metadata.</p>
+<p>An <strong>attribute</strong> extends an {{Glossary("element")}}, changing its behavior or providing metadata.</p>
 
 <p>An attribute always has the form <code>name="value"</code> (the attribute's identifier followed by its associated value).</p>
 
