--- a/files/en-us/glossary/ide/index.html
+++ b/files/en-us/glossary/ide/index.html
@@ -5,7 +5,7 @@ tags:
   - CodingScripting
   - Glossary
 ---
-<p><span class="_Tgc">An Integrated Development Environment (<strong>IDE</strong>) or Interactive Development environment is a software application that provides comprehensive facilities to computer programmers for software development.</span> An IDE normally consists of a source code editor, build automation tools and a debugger.</p>
+<p>An Integrated Development Environment (<strong>IDE</strong>) or Interactive Development environment is a software application that provides comprehensive facilities to computer programmers for software development. An IDE normally consists of a source code editor, build automation tools and a debugger.</p>
 
 <h2 id="Learn_more">Learn more</h2>
 
