--- a/files/en-us/glossary/semantics/index.html
+++ b/files/en-us/glossary/semantics/index.html
@@ -7,7 +7,7 @@ tags:
   - HTML
   - semantics
 ---
-<p><span class="seoSummary">In programming, <strong>Semantics</strong> refers to the <em>meaning</em> of a piece of code — for example "what effect does running that line of JavaScript have?", or "what purpose or role does that HTML element have" (rather than "what does it look like?".)</span></p>
+<p>In programming, <strong>Semantics</strong> refers to the <em>meaning</em> of a piece of code — for example "what effect does running that line of JavaScript have?", or "what purpose or role does that HTML element have" (rather than "what does it look like?".)</p>
 
 <h2 id="Semantics_in_JavaScript">Semantics in JavaScript</h2>
 
