--- a/files/en-us/glossary/session_hijacking/index.html
+++ b/files/en-us/glossary/session_hijacking/index.html
@@ -26,7 +26,7 @@ tags:
 <h3 id="Session_hijacking_process">Session hijacking process</h3>
 
 <ol>
- <li><strong>Sniff</strong>, that is perform a man-in-the-middle (<span class="scayt-misspell-word">MITM</span>) attack, place yourself between victim and server.</li>
+ <li><strong>Sniff</strong>, that is perform a man-in-the-middle (MITM) attack, place yourself between victim and server.</li>
  <li><strong>Monitor</strong> packets flowing between server and user.</li>
  <li><strong>Break</strong> the victim machine's connection.</li>
  <li><strong>Take control</strong> of the session.</li>
