--- a/files/en-us/glossary/user_agent/index.html
+++ b/files/en-us/glossary/user_agent/index.html
@@ -16,11 +16,11 @@ tags:
 
 <p>Besides a browser, a user agent could be a bot scraping webpages, a download manager, or another app accessing the Web. Along with each request they make to the server, browsers include a self-identifying {{HTTPHeader("User-Agent")}} {{Glossary("HTTP")}} header called a user agent (UA) string. This string often identifies the browser, its version number, and its host operating system.</p>
 
-<p><span class="objectBox objectBox-string">Spam bots, download managers, and some browsers often send a fake UA string to announce themselves as a different client. This is known as <em>user agent spoofing</em>.</span></p>
+<p>Spam bots, download managers, and some browsers often send a fake UA string to announce themselves as a different client. This is known as <em>user agent spoofing</em>.</p>
 
-<p><span class="objectBox objectBox-string">The user agent string can be accessed with </span>{{Glossary("JavaScript")}}<span class="objectBox objectBox-string"> on the client side using the {{domxref("Navigator/userAgent", "NavigatorID.userAgent")}} property.</span></p>
+<p>The user agent string can be accessed with {{Glossary("JavaScript")} on the client side using the {{domxref("Navigator/userAgent", "NavigatorID.userAgent")}} property.</p>
 
-<p>A typical user agent string looks like this: <span class="objectBox objectBox-string"><code>"Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:35.0) Gecko/20100101 Firefox/35.0"</code>. </span></p>
+<p>A typical user agent string looks like this: <code>"Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:35.0) Gecko/20100101 Firefox/35.0"</code>.</p>
 
 <h2 id="Learn_more">Learn more</h2>
 
