--- a/files/en-us/glossary/data_structure/index.html
+++ b/files/en-us/glossary/data_structure/index.html
@@ -10,7 +10,7 @@ tags:
 
 <h2 id="Learn_more">Learn more</h2>
 
-<h3 class="highlight-spanned" id="General_knowledge"><span class="highlight-span">General knowledge</span></h3>
+<h3 id="General_knowledge">General knowledge</h3>
 
 <ul>
  <li>{{interwiki("wikipedia", "Data_structure", "Data structure")}} on Wikipedia</li>
