--- a/files/en-us/glossary/decryption/index.html
+++ b/files/en-us/glossary/decryption/index.html
@@ -18,7 +18,7 @@ tags:
 
 <h2 id="Learn_more">Learn more</h2>
 
-<h3 class="highlight-spanned" id="Technical_reference">Technical reference</h3>
+<h3 id="Technical_reference">Technical reference</h3>
 
 <ul>
  <li><a href="/en-US/docs/Encryption_and_Decryption">Encryption and Decryption</a></li>
