--- a/files/en-us/glossary/hyperlink/index.html
+++ b/files/en-us/glossary/hyperlink/index.html
@@ -21,8 +21,8 @@ tags:
 <h3 id="Technical_reference">Technical reference</h3>
 
 <ul>
- <li><a class="external external-icon" href="https://www.w3.org/TR/1999/REC-html401-19991224/struct/links.html">Links in HTML Documents - W3C</a></li>
- <li><a class="external external-icon" href="https://w3c.github.io/html-reference/a.html">HTML5 a - hyperlink - W3C</a></li>
+ <li><a href="https://www.w3.org/TR/1999/REC-html401-19991224/struct/links.html">Links in HTML Documents - W3C</a></li>
+ <li><a href="https://w3c.github.io/html-reference/a.html">HTML5 a - hyperlink - W3C</a></li>
 </ul>
 
 <h3 id="Learn_about_it">Learn about it</h3>
