--- a/files/en-us/glossary/mixin/index.html
+++ b/files/en-us/glossary/mixin/index.html
@@ -21,5 +21,5 @@ tags:
 <h3 id="General_knowledge">General knowledge</h3>
 
 <ul>
- <li><a class="external external-icon" href="https://en.wikipedia.org/wiki/Mixin">Mixin</a> on Wikipedia</li>
+ <li><a href="https://en.wikipedia.org/wiki/Mixin">Mixin</a> on Wikipedia</li>
 </ul>
