--- a/files/en-us/glossary/p2p/index.html
+++ b/files/en-us/glossary/p2p/index.html
@@ -7,7 +7,7 @@ tags:
   - Networking
   - P2P
 ---
-<p class="seoSummary">P2P (Peer-to-peer) is a computer networking architecture in which all participating nodes (<em>peers</em>) have equal privileges and share the workload. P2P differs from a client-server network architecture, where multiple <em>client</em> nodes connect to centralized <em>servers</em> for services. P2P is commonly found in Blockchain Applications.</p>
+<p>P2P (Peer-to-peer) is a computer networking architecture in which all participating nodes (<em>peers</em>) have equal privileges and share the workload. P2P differs from a client-server network architecture, where multiple <em>client</em> nodes connect to centralized <em>servers</em> for services. P2P is commonly found in Blockchain Applications.</p>
 
 <h2 id="Learn_more">Learn more</h2>
 
