--- a/files/en-us/glossary/tcp_handshake/index.html
+++ b/files/en-us/glossary/tcp_handshake/index.html
@@ -11,7 +11,9 @@ tags:
   - TLS
   - Web Performance
 ---
-<p>{{glossary('Transmission Control Protocol (TCP)','TCP (Transmission Control Protocol)')}} is a Transport Layer host-to-host protocol for connection-oriented communication between two computers on an IP network. <span class="seoSummary">TCP uses a <strong>three-way handshake </strong>(aka TCP-handshake, three message handshake, and/or SYN-SYN-ACK) to set up a TCP/IP connection over an IP based network. </span>The three messages transmitted by TCP to negotiate and start a TCP session are nicknamed SYN, <em>SYN-ACK</em>, and ACK for <strong>SYN</strong>chronize, <strong>SYN</strong>chronize-<strong>ACK</strong>nowledgement, and <strong>ACK</strong>nowledge respectively. The three message mechanism is designed so that two computers that want to pass information back and forth to each other can negotiate the parameters of the connection before transmitting data such as HTTP browser requests.</p>
+<p>{{glossary('Transmission Control Protocol (TCP)','TCP (Transmission Control Protocol)')}} uses a <strong>three-way handshake </strong>(aka TCP-handshake, three message handshake, and/or SYN-SYN-ACK) to set up a TCP/IP connection over an IP based network.<p>
+
+<p>The three messages transmitted by TCP to negotiate and start a TCP session are nicknamed SYN, <em>SYN-ACK</em>, and ACK for <strong>SYN</strong>chronize, <strong>SYN</strong>chronize-<strong>ACK</strong>nowledgement, and <strong>ACK</strong>nowledge respectively. The three message mechanism is designed so that two computers that want to pass information back and forth to each other can negotiate the parameters of the connection before transmitting data such as HTTP browser requests.</p>
 
 <p>The host, generally the browser, sends a TCP SYNchronize packet to the server. The server receives the SYN and sends back a SYNchronize-ACKnowledgement. The host receives the server's SYN-ACK and sends an ACKnowledge. The server receives ACK and the TCP socket connection is established.</p>
 
