--- a/files/en-us/glossary/time_to_interactive/index.html
+++ b/files/en-us/glossary/time_to_interactive/index.html
@@ -7,7 +7,7 @@ tags:
   - Reference
   - Web Performance
 ---
-<p class="seoSummary"><strong>Time to Interactive</strong> (TTI) is a non-standardized web performance 'progress' metric defined as the point in time when the last <a href="/en-US/docs/Web/API/Long_Tasks_API">Long Task</a> finished and was followed by 5 seconds of network and main thread inactivity.</p>
+<p><strong>Time to Interactive</strong> (TTI) is a non-standardized web performance 'progress' metric defined as the point in time when the last <a href="/en-US/docs/Web/API/Long_Tasks_API">Long Task</a> finished and was followed by 5 seconds of network and main thread inactivity.</p>
 
 <p>TTI, proposed by the Web Incubator Community Group in 2018, is intended to provide a metric that describes when a page or application contains useful content and the main thread is idle and free to respond to user interactions, including having event handlers registered.</p>
 
