Remove DIV IDs from HTML docs, part 1

--- a/files/en-us/web/html/applying_color/index.html
+++ b/files/en-us/web/html/applying_color/index.html
@@ -166,9 +166,7 @@ tags:
 
 <p>Here are some sample colors in HSL notation:</p>
 
-<div id="hsl-swatches">
-<div class="hidden">
-<pre class="brush: css">table {
+<pre class="brush: css hidden">table {
   border: 1px solid black;
   font: 16px "Open Sans", Helvetica, Arial, sans-serif;
   border-spacing: 0;
@@ -219,13 +217,11 @@ th {
   &lt;/tr&gt;
  &lt;/tbody&gt;
 &lt;/table&gt;</pre>
-</div>
 
-<p>{{EmbedLiveSample("hsl-swatches", 300, 260)}}</p>
-</div>
+<p>{{EmbedLiveSample("HSL_functional_notation", 300, 260)}}</p>
 
 <div class="note">
-<p>Note that when you omit the hue's unit, it's assumed to be in degrees (<code>deg</code>).</p>
+<p><strong>Note:</strong> When you omit the hue's unit, it's assumed to be in degrees (<code>deg</code>).</p>
 </div>
 
 <h2 id="Using_color">Using color</h2>
