--- a/files/en-us/web/html/attributes/accept/index.html
+++ b/files/en-us/web/html/attributes/accept/index.html
@@ -36,24 +36,22 @@ tags:
 
 <p>When set on a file input type, the native file picker that opens up should only enable selecting files of the correct file type. Most operating systems lighten the files that don't match the criteria and aren't selectable.</p>
 
-<div id="simple_example">
 <pre class="brush: html">&lt;p&gt;
-	&lt;label for="soundFile"&gt;Select an audio file:&lt;/label&gt;
-	&lt;input type="file" id="soundFile" accept="audio/*"&gt;
-	&lt;/p&gt;
-	&lt;p&gt;
-	&lt;label for="videoFile"&gt;Select a video file:&lt;/label&gt;
-	&lt;input type="file" id="videoFile" accept="video/*"&gt;
-	&lt;/p&gt;
-	&lt;p&gt;
-	&lt;label for="imageFile"&gt;Select some images:&lt;/label&gt;
-	&lt;input type="file" id="imageFile" accept="image/*" multiple&gt;
-	&lt;/p&gt;</pre>
+  &lt;label for="soundFile"&gt;Select an audio file:&lt;/label&gt;
+  &lt;input type="file" id="soundFile" accept="audio/*"&gt;
+&lt;/p&gt;
+&lt;p&gt;
+  &lt;label for="videoFile"&gt;Select a video file:&lt;/label&gt;
+  &lt;input type="file" id="videoFile" accept="video/*"&gt;
+&lt;/p&gt;
+&lt;p&gt;
+  &lt;label for="imageFile"&gt;Select some images:&lt;/label&gt;
+  &lt;input type="file" id="imageFile" accept="image/*" multiple&gt;
+&lt;/p&gt;</pre>
 
-<p>{{EmbedLiveSample('simple_example', '100%', 200)}}</p>
+<p>{{EmbedLiveSample('Examples', '100%', 200)}}</p>
 
 <p>Note the last example allows you to select multiple images. See the <code><a href="multiple">multiple</a></code> attribute for more information.</p>
-</div>
 
 <h2 id="Unique_file_type_specifiers">Unique file type specifiers</h2>
 
