Remove all remaining DIV IDs from SVG

--- a/files/en-us/web/svg/attribute/d/index.html
+++ b/files/en-us/web/svg/attribute/d/index.html
@@ -19,10 +19,9 @@ tags:
   <li>{{SVGElement("missing-glyph")}}</li>
 </ul>
 
-<div id="Example">
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }</pre>
-</div>
+<h2>Example</h2>
+
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;path fill="none" stroke="red"
@@ -34,7 +33,6 @@ tags:
 &lt;/svg&gt;</pre>
 
 <p>{{EmbedLiveSample('Example', '100%', 200)}}</p>
-</div>
 
 <h2 id="path">path</h2>
 
