--- a/files/en-us/web/svg/attribute/patterncontentunits/index.html
+++ b/files/en-us/web/svg/attribute/patterncontentunits/index.html
@@ -18,12 +18,11 @@ browser-compat: svg.elements.pattern.patternContentUnits
   <li>{{SVGElement('pattern')}}</li>
 </ul>
 
-<div id="Example">
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }</pre>
-</div>
+<h2>Example</h2>
 
-<pre class="brush: html; highlight[4]">&lt;svg viewBox="0 0 200 100" xmlns="http://www.w3.org/2000/svg"&gt;
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
+
+<pre class="brush: html">&lt;svg viewBox="0 0 200 100" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;!--
   A pattern tile that content coordinates and values are
   computed against the current coordinate user space.
@@ -56,7 +55,6 @@ browser-compat: svg.elements.pattern.patternContentUnits
 &lt;/svg&gt;</pre>
 
 <p>{{EmbedLiveSample('Example', 150, '100%')}}</p>
-</div>
 
 <h2 id="pattern">pattern</h2>
 
