--- a/files/en-us/web/svg/element/animatemotion/index.html
+++ b/files/en-us/web/svg/element/animatemotion/index.html
@@ -15,10 +15,9 @@ browser-compat: svg.elements.animateMotion
 <p><strong>Note:</strong> To reuse an existing path, it will be necessary to use an {{SVGElement("mpath")}} element inside the <code>&lt;animateMotion&gt;</code> element instead of the {{SVGAttr("path")}} attribute.</p>
 </div>
 
-<div id="Example">
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100%; margin: 0; padding: 0; display:block; }</pre>
-</div>
+<h2>Example</h2>
+
+<pre class="brush: css hidden">html,body,svg { height:100%; margin: 0; padding: 0; display:block; }</pre>
 
 <pre class="brush: html; highlight[6,7]">&lt;svg viewBox="0 0 200 100" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;path fill="none" stroke="lightgrey"
@@ -31,7 +30,6 @@ browser-compat: svg.elements.animateMotion
 &lt;/svg&gt;</pre>
 
 <p>{{EmbedLiveSample('Example', 150, '100%')}}</p>
-</div>
 
 <h2 id="Usage_context">Usage context</h2>
 
