--- a/files/en-us/web/svg/element/set/index.html
+++ b/files/en-us/web/svg/element/set/index.html
@@ -15,10 +15,9 @@ browser-compat: svg.elements.set
 
 <p class="notecard note"><strong>Note:</strong> The <code>&lt;set&gt;</code> element is non-additive. The {{SVGAttr('additive')}} and {{SVGAttr('accumulate')}} attributes are not allowed, and will be ignored if specified.</p>
 
-<div id="Example">
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100%; margin:0; padding:0; }</pre>
-</div>
+<h2>Example</h2>
+
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html; highlight[8]">&lt;svg viewBox="0 0 10 10" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;style&gt;
@@ -32,7 +31,6 @@ browser-compat: svg.elements.set
 &lt;/svg&gt;</pre>
 
 <p>{{EmbedLiveSample('Example', 150, '100%')}}</p>
-</div>
 
 <h2 id="Attributes">Attributes</h2>
 
