--- a/files/en-us/web/svg/element/textpath/index.html
+++ b/files/en-us/web/svg/element/textpath/index.html
@@ -12,10 +12,9 @@ browser-compat: svg.elements.textPath
 
 <p>To render text along the shape of a {{SVGElement("path")}}, enclose the text in a <strong><code>&lt;textPath&gt;</code></strong> element that has an {{SVGAttr("href")}} attribute with a reference to the {{SVGElement("path")}} element.</p>
 
-<div id="Example">
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }</pre>
-</div>
+<h2>Example</h2>
+
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"&gt;
 
@@ -34,7 +33,6 @@ browser-compat: svg.elements.textPath
 &lt;/svg&gt;</pre>
 
 <p>{{EmbedLiveSample('Example', 200, 200)}}</p>
-</div>
 
 <h2 id="Attributes">Attributes</h2>
 
