--- a/files/en-us/web/svg/element/title/index.html
+++ b/files/en-us/web/svg/element/title/index.html
@@ -16,10 +16,9 @@ browser-compat: svg.elements.title
 
 <p class="note"><strong>Note:</strong> For backward compatibility with SVG 1.1, <code>&lt;title&gt;</code> elements should be the first child element of their parent.</p>
 
-<div id="Example">
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }</pre>
-</div>
+<h2>Example</h2>
+
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="0 0 20 10" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;circle cx="5" cy="5" r="4"&gt;
@@ -32,7 +31,6 @@ browser-compat: svg.elements.title
 &lt;/svg&gt;</pre>
 
 <p>{{EmbedLiveSample('Example', 150, '100%')}}</p>
-</div>
 
 <h2 id="Attributes">Attributes</h2>
 
