--- a/files/en-us/web/svg/attribute/href/index.html
+++ b/files/en-us/web/svg/attribute/href/index.html
@@ -171,19 +171,15 @@ browser-compat: svg.attributes.href
 
 <h4 id="Example">Example</h4>
 
-<div id="imageExample">
-<div class="hidden">
-<pre class="brush: css">html, body, svg {
+<pre class="brush: css hidden">html, body, svg {
   height: 100%;
 }</pre>
-</div>
 
 <pre class="brush: html">&lt;svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;image href="/files/2917/fxlogo.png" x="0" y="0" height="100" width="100"/&gt;
 &lt;/svg&gt;</pre>
 
-<p>{{EmbedLiveSample("imageExample", 200, 250)}}</p>
-</div>
+<p>{{EmbedLiveSample("Example", 200, 250)}}</p>
 
 <h3 id="linearGradient">linearGradient</h3>
 
