--- a/files/en-us/web/svg/element/circle/index.html
+++ b/files/en-us/web/svg/element/circle/index.html
@@ -13,17 +13,15 @@ browser-compat: svg.elements.circle
 
 <p>The <strong><code>&lt;circle&gt;</code></strong> <a href="/en-US/docs/Web/SVG">SVG</a> element is an <a href="/en-US/docs/Web/SVG/Tutorial/Basic_Shapes">SVG basic shape</a>, used to draw circles based on a center point and a radius.</p>
 
-<div id="Example">
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }</pre>
-</div>
+<h2>Example</h2>
+
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;circle cx="50" cy="50" r="50"/&gt;
 &lt;/svg&gt;</pre>
 
 <p>{{EmbedLiveSample('Example', 100, 100)}}</p>
-</div>
 
 <h2 id="Attributes">Attributes</h2>
 
