--- a/files/en-us/web/svg/element/path/index.html
+++ b/files/en-us/web/svg/element/path/index.html
@@ -12,10 +12,9 @@ browser-compat: svg.elements.path
 
 <p>The <strong><code>&lt;path&gt;</code></strong> <a href="/en-US/docs/Web/SVG">SVG</a> element is the generic element to define a shape. All the basic shapes can be created with a path element.</p>
 
-<div id="Example">
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }</pre>
-</div>
+<h2>Example</h2>
+
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;path d="M 10,30
@@ -26,7 +25,6 @@ browser-compat: svg.elements.path
 &lt;/svg&gt;</pre>
 
 <p>{{EmbedLiveSample('Example', 100, 100)}}</p>
-</div>
 
 <h2 id="Attributes">Attributes</h2>
 
