--- a/files/en-us/web/svg/element/pattern/index.html
+++ b/files/en-us/web/svg/element/pattern/index.html
@@ -13,10 +13,9 @@ browser-compat: svg.elements.pattern
 
 <p>The <code>&lt;pattern&gt;</code> is referenced by the {{SVGAttr("fill")}} and/or {{SVGAttr("stroke")}} attributes on other <a href="/en-US/docs/Web/SVG/Tutorial/Basic_Shapes">graphics elements</a> to fill or stroke those elements with the referenced pattern.</p>
 
-<div id="Example">
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }</pre>
-</div>
+<h2>Example</h2>
+
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html; highlight[4]">&lt;svg viewBox="0 0 230 100" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;defs&gt;
@@ -30,7 +29,6 @@ browser-compat: svg.elements.pattern
 &lt;/svg&gt;</pre>
 
 <p>{{EmbedLiveSample('Example', 150, '100%')}}</p>
-</div>
 
 <h2 id="Attributes">Attributes</h2>
 
