--- a/files/en-us/web/svg/element/stop/index.html
+++ b/files/en-us/web/svg/element/stop/index.html
@@ -12,10 +12,9 @@ browser-compat: svg.elements.stop
 
 <p>The SVG <strong><code>&lt;stop&gt;</code></strong> element defines a color and its position to use on a gradient. This element is always a child of a {{SVGElement("linearGradient")}} or {{SVGElement("radialGradient")}} element.</p>
 
-<div id="Example">
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }</pre>
-</div>
+<h2>Example</h2>
+
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html; highlight[5,6]">&lt;svg viewBox="0 0 10 10" xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"&gt;
@@ -31,7 +30,6 @@ browser-compat: svg.elements.stop
 &lt;/svg&gt;</pre>
 
 <p>{{EmbedLiveSample('Example', 150, '100%')}}</p>
-</div>
 
 <h2 id="Attributes">Attributes</h2>
 
